<resources>
    <string name="app_name">Math Quiz</string>
    <string name="math_quiz">Math Quiz</string>
    <string name="example_name">Mahasiswa</string>
    <string name="greeting">Selamat Sore</string>
    <string name="welcome_text">Ayo Mulai semangat Belajar dalam memahami Kalkulus sebelum ada kata terlambat dan penyesalan</string>
    <string name="mulai_pembelajaran">Mulai Pembelajaran</string>
    <string name="niat">Mulailah semua dengan Niat</string>
    <string name="mulai_belajar">Mulai Belajar</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="exit">Keluar Akun</string>

    <string name="nav_home">Beranda</string>
    <string name="nav_rumus">Rumus</string>
    <string name="nav_information">Profil</string>
    <string name="rumus_materi">Rumus Materi</string>
    <string name="profile">Profil</string>
    <string name="title_home">Beranda</string>
    <string name="tv_about_apps">Tentang Aplikasi</string>
    <string name="about_developers">Tentang Developer</string>
    <string name="how_to_use">Cara Penggunaan Aplikasi</string>
    <string name="text_about_aplication">Aplikasi Math Quiz menggabungkan konsep kalkulus dengan pendekatan gamifikasi untuk memperdalam pemahaman pengguna. Melalui tantangan matematis seperti integrasi, diferensiasi, dan konsep kalkulus lainnya, aplikasi ini tidak hanya menguji keterampilan, tetapi juga memperkaya pembelajaran dengan elemen permainan. Pengguna dapat memilih tingkat kesulitan, menyelesaikan soal dalam waktu tertentu, dan memantau perkembangan melalui skor dan pencapaian. Fitur penjelasan dan umpan balik langsung membantu memahami konsep sulit, sementara kompetisi antar pengguna memberikan motivasi tambahan. Dengan antarmuka ramah pengguna dan desain menarik, aplikasi ini menjadikan pembelajaran kalkulus lebih interaktif dan menantang.</string>

    <string name="nama_developer">Dion Defindra Dinatha</string>
    <string name="nim_developer">NIM : 422021611022</string>
    <string name="prodi_developer">Mahasiswa Program Studi Teknik Informatika Universitas Darussalam Gontor</string>
    <string name="pembimbing">Pembimbing</string>
    <string name="developer">Developer</string>
    <string name="pembimbing_Name_1">Dihin Muriyatmoko, S.ST., M.T.</string>
    <string name="pembimbing_NIDN_1">NIDN : 0729068701</string>
    <string name="pembimbing_Prodi_1">Ketua Program Studi Teknik Informatika Universitas Darussalam Gontor</string>
    <string name="pembimbing_Name_2">Triana Harmini, M.Pd.</string>
    <string name="pembimbing_NIDN_2">NIDN : 0717018504</string>
    <string name="pembimbing_Prodi_2">Dosen Program Studi Teknik Informatika Universitas Darussalam Gontor</string>
    <string name="developer_dan_pempimbing">Developer dan Pembimbing</string>
    <string name="tv_Developer_Pembimbing">Seorang developer adalah ahli dalam merancang, mengembangkan, dan mengimplementasikan perangkat lunak atau aplikasi menggunakan bahasa pemrograman seperti Java atau JavaScript. Mereka bertanggung jawab untuk testing, debugging, dan memastikan aplikasi berfungsi dengan baik. Di sisi lain, seorang dosen pembimbing adalah akademisi yang memberikan bimbingan dalam penelitian mahasiswa, membantu mereka dalam metode penelitian, memberikan umpan balik kritis, dan mendorong pemikiran analitis dalam bidang studi mereka. Peran mereka penting dalam mendukung pengembangan teknis dan kemajuan akademis mahasiswa.</string>
    <string name="materi_yang_dipelajari">Materi yang dipelajari dalam aplikasi Math Quiz meliputi Materi Turunan dan Materi Integral\n\nTurunan adalah konsep dalam kalkulus yang menggambarkan laju perubahan suatu fungsi terhadap variabelnya. Secara matematis, turunan dari suatu fungsi f(x) pada titik x merupakan nilai limit dari perubahan fungsi terhadap perubahan kecil pada x. Turunan merepresentasikan kemiringan garis singgung grafik fungsi pada titik tersebut. Sebagai contoh, jika f(x) menyatakan posisi suatu benda terhadap waktu, maka turunan f(x) menyatakan kecepatan benda tersebut. Aturan dasar turunan meliputi turunan fungsi konstanta, pangkat, penjumlahan, pengurangan, perkalian, dan pembagian fungsi. Sementara itu, Integral merupakan kebalikan dari turunan yang digunakan untuk menentukan luas daerah di bawah kurva, akumulasi suatu besaran, atau fungsi asal dari suatu turunan. Secara matematis, integral dapat dipahami sebagai proses penjumlahan kontinu terhadap perubahan kecil suatu fungsi. Integral terbagi menjadi integral tak tentu dan integral tentu, yang masing-masing memiliki aturan dasar dalam perhitungannya.\n\nMateri turunan dan integral memiliki aplikasi yang luas dalam berbagai bidang, seperti fisika untuk menghitung kecepatan, percepatan, dan jarak tempuh, dalam ekonomi untuk menganalisis biaya dan pendapatan total, serta dalam teknik dan sains untuk berbagai analisis perubahan, optimasi, dan pemodelan masalah nyata.</string>
    <string name="tv_how_to_use">Fitur How to Use adalah bagian dalam aplikasi yang dirancang untuk memberikan panduan lengkap kepada pengguna tentang cara menggunakan aplikasi secara efektif. Bagian ini biasanya mencakup langkah-langkah detail, petunjuk visual, dan tips berguna yang membantu pengguna memahami fungsi dan fitur utama aplikasi. Dengan adanya How to Use, pengguna dapat dengan mudah mengetahui bagaimana cara menggunakan fitur-fitur tertentu, dan menyelesaikan masalah umum yang mungkin mereka hadapi. Fitur ini sangat penting untuk meningkatkan pengalaman pengguna dengan meminimalkan kebingungan dan memastikan bahwa semua pengguna, baik yang baru maupun yang sudah berpengalaman, dapat memanfaatkan semua kemampuan aplikasi secara optimal.</string>
    <string name="tv_penyampaian_materi">Ada 5 materi yang tersedia, tetapi hanya materi pertama yang terbuka awalnya. disetiap Materi yang dipelajari pengguna terdapat macam-macam tata cara pembelajaran materi seperti Teks, Video, Rumus dan Contoh Soal. Untuk membuka materi berikutnya, pengguna harus menyelesaikan kuis dari materi sebelumnya dengan benar.</string>
    <string name="penyampaian_quiz">Setiap materi dalam aplikasi ini dilengkapi dengan kuis yang terkait. Jika pengguna menjawab kuis dengan benar, materi berikutnya akan terbuka dan dapat diakses. Namun, jika pengguna memberikan jawaban yang salah, mereka mungkin akan diberikan kesempatan untuk mencoba lagi atau kembali ke materi sebelumnya untuk mempelajari lebih lanjut sebelum mencoba kuis tersebut lagi.</string>
    <string name="category">Materi 1</string>
    <string name="title_materi">Aplikasi Turunan Fungsi (Garis Singgung dan Garis Normal Kurva)</string>
    <string name="aplikasi_math_quiz">Aplikasi Math Quiz</string>
    <string name="materi">Materi</string>
    <string name="sub_materi">List Materi</string>
    <string name="category_sub">Materi adalah istilah yang merujuk kepada segala sesuatu yang </string>
    <string name="modul">modul</string>
    <string name="selesai">Selesai</string>
    <string name="quiz">Quiz</string>
    <string name="question">1 + 1 =</string>
    <string name="question_1_5">Soal %1$d/%2$d</string>
    <string name="teks">Aplikasi Turunan Fungsi (Garis Singgung dan Garis Normal kurva)</string>
    <string name="_50">0</string>
    <string name="hasil">Hasil Score</string>
    <string name="result">Hasil</string>
    <string name="rincian">Rincian</string>
    <string name="soal_yang_harus_di_perbaiki">Soal yang Harus diperbaiki</string>
    <string name="next">Lanjut</string>


    <string name="welcome_to">Selamat Datang</string>
    <string name="math_quiz_mobile">di Aplikasi Math Quiz</string>
    <string name="login_teks">Masukan Akun Anda untuk Memulai Aplikasi</string>
    <string name="sign_in">Masuk</string>
    <string name="dont_account">Belum Punya Akun?</string>
    <string name="sign_up">Daftar</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Daftarkan Akun Anda untuk memulai Aplikasi</string>
    <string name="user_name">Nama Lengkap</string>
    <string name="already_have_an_account">Punya Akun?</string>
    <string name="screen_title_1">Mengenal Kalkulus</string>
    <string name="screen_teks_1">kalkulus adalah bagian matematika yang melibatkan pengertian dan penggunaan deferensial dan integral fungsi serta konsep yang berkaitan</string>
    <string name="screen_title_2">Mengenal Math Quiz</string>
    <string name="screen_teks_2">Aplikasi Math Quiz Ini guna untuk mempelajari Mata Kuliah kalkulus Materi Turunan lebih dalam bentuk quiz, jika quiz belum diselesaikan materi selanjutnya tidak akan terbuka</string>
    <string name="screen_title_3">Tunggu Apalagi Ayo Kita Pelajari!!!</string>
    <string name="screen_teks_3">Ayo Mulai Mengerjakan agar kita menjadi jauh lebih sukses dan tetap bersemangat</string>
    <string name="get_started">Ayo Mulai</string>
    <string name="nav_profile">Profil</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="forgot_password">Lupa Password</string>
    <string name="example_email">example@gmail.com</string>
    <string name="example_nim">1234567890</string>
    <string name="example_prodi">Program Studi</string>
    <string name="example_semester">|| semester : 0</string>
    <string name="tv_nim">NIM</string>
    <string name="program_studi">Program Studi</string>
    <string name="username">Nama Lengkap</string>
    <string name="program_studi_2">Program Studi</string>
    <string name="semester_2">Semester</string>
    <string name="semester_3">Semester</string>
    <string name="reset_pasword">Mengatur Ulang Pasword</string>
    <string name="text_reset">Kami akan mengirimkan tautan pengaturan ulang kata sandi ke Email Anda</string>
    <string name="cancel">Batal</string>
    <string name="send">Kirim</string>
    <string name="log_out">Keluar Akun</string>
    <string name="tv_change_password">Ganti Password</string>
    <string name="pasword_old">Password Lama</string>
    <string name="password_new">Password Baru</string>
    <string name="change_password">Ganti</string>
    <string name="confirmation_password">Konfirmasi Password</string>
    <string name="materi_belum_terbuka">Materi Masih TerKunci</string>
    <string name="aplikasi_math_quiz_teks">Aplikasi Math Quiz</string>
    <string name="materi_title">Materi yang dipelajari</string>
    <string name="tata_cara_pemakaian_aplikasi">Tata cara pemakaian Aplikasi</string>
    <string name="_1_mempelajari_materi">1. Mempelajari Materi</string>
    <string name="_2_mengerjakan_quiz">2. Mengerjakan Quiz</string>
    <string name="soal">Tentukan turunan pertama fungsi</string>
    <string name="score">Selamat Anda mendapatkan Score</string>
    <string name="progress_point_anda_80">Progress Point Anda : 80%</string>
    <string name="congratulation">Selamat!!</string>
    <string name="enter">Masuk</string>
    <string name="next_materi">Lanjut Materi</string>
    <string name="learn_again">Belajar Kembali</string>
    <string name="silahkan_ke_materi_selanjutnya">Silahkan ke Materi Selanjutnya</string>
    <string name="yes">Iya</string>
    <string name="no">Tidak</string>
    <string name="to_reset_your_progress_point">untuk mengatur ulang Progress Point Anda</string>
    <string name="are_you_sure">Apakah Anda Yakin</string>
    <string name="warning_message">Pesan Peringatan!!</string>
    <string name="oke">OKE</string>
    <string name="quiz_terkunci">Quiz Terkunci!!!</string>

</resources>
